# pleroma

./: .gitignore  AGENTS.md  AUDIT-FABLE.md  AUDIT.md  BRIDGES-DRAFT.md  CONTRIBUTING.md  Cargo.toml  NOTES.md  OPEN-3.md  OPEN.md  README.md  RESEARCH-EXCESS.md  RESEARCH-GOLDARF.md  ROADMAP.md  TABLES.md  demo.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
docs/: COMPLETENESS.md  CONSISTENCY.md  CONTINUATIONS.md  CORRECTNESS.md  DONE.md  OPEN.md  TABLES.md
docs/ogham/: conformance.txt  conformance_v2.txt  ogham.md
examples/: bent_route.rs  interactive_kernel.rs  loopy_quadric.rs  misere_quotient.rs  octal_hunt.rs  ogham_repl.rs  tour.rs  tropical.rs
examples/common/: mod.rs
experiments/: arf_win_bias.py  artin_arf.py  common.py  cyclotomic_3k_family.py  echo_solver.py  exception_column_m4.py  framing_obstruction.py  gold_family_survey.py  gold_form_from_games.py  linking_game.py  misere_kernel.py  open_question_probe.py  ordinal_excess_probe.py  tartan_bilinear.py  trace_form_arf.py
experiments/audit/: README.md  arf_audit.py  dickson_audit.py  dyadic_check.py  fp_full.py  (+17 more)
roadmap/: CODA.md  DONE.md  TASTE.md  TBD.md  TODO.md
spec/: conformance.txt  conformance_v2.txt  ogham.md
src/: arf.rs  clifford.rs  games.rs  kernel.rs  lib.rs  misere.rs  nimber.rs  py.rs  scalar.rs  surcomplex.rs  surreal.rs
tests/: clifford_axioms.rs  ogham_conformance.rs  scalar_axioms.rs  tropical_axioms.rs
writeup/: pleroma.tex
writeups/: RESEARCH-EXCESS.md  RESEARCH-GOLDARF.md  excess.tex  goldarf-extraspecial.md  goldarf.tex
(+262 files in other folders)
